# demetra

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
configs/: bob_mueller_2025.yaml
docs/: README.md  ROADMAP.md
src/agrifield/: __init__.py  cli.py  pipeline.py
src/agrifield/config/: field_config.py  settings.py
src/agrifield/geo/: transforms.py
src/agrifield/grid/: builder.py  operations.py
src/agrifield/ingest/: nitrogen_loader.py  yield_loader.py
src/agrifield/modeling/: comparison.py  evaluation.py  features.py
src/agrifield/viz/: model_plots.py
src/demetra/: __init__.py  cli.py  pipeline.py
src/demetra/config/: settings.py
src/demetra/geo/: constants.py  transforms.py
src/demetra/grid/: builder.py
src/demetra/ingest/: nitrogen_loader.py  yield_loader.py
src/demetra/modeling/: comparison.py  data.py  nitrogen.py
src/demetra/viz/: geo_plots.py  model_plots.py
tests/: conftest.py
tests/test_grid/: test_builder.py
tests/test_ingest/: test_yield_loader.py
tests/test_modeling/: test_evaluation.py  test_features.py
